--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -40,8 +40,8 @@
         <li><a href="dashboard.html" class="active"><i class="fas fa-qrcode"></i>Dashboard</a></li>
         <li><a href="test.html"><i class="las la-book-open"></i>Test</a></li>
         <li><a href=""><i class="las la-award"></i>Progress</a></li>
-        <li><a href=""><i class="las la-chart-bar"></i>Gantt chart</a></li>
-        <li><a href=""><i class="las la-map"></i>Roadmap</a></li>
+        <li><a href="gantt-chart.html"><i class="las la-chart-bar"></i>Gantt chart</a></li>
+        <li><a href="roadmap.html"><i class="las la-map"></i>Roadmap</a></li>
         <li><a href=""><i class="las la-cog"></i>Setting</a></li>
     </ul>
     <div class="user-wrapper">
