done for checking -munna

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -37,7 +37,7 @@
         <p class="mb-0">Strategyzer</p>
     </div>
     <ul class="sidebar-menu">
-        <li><a href="dashboard.html" class="active"><i class="fas fa-qrcode"></i>Dashboard</a></li>
+        <li><a href="dashboard.html"><i class="fas fa-qrcode"></i>Dashboard</a></li>
         <li><a href="test.html"><i class="las la-book-open"></i>Test</a></li>
         <li><a href=""><i class="las la-award"></i>Progress</a></li>
         <li><a href="gantt-chart.html"><i class="las la-chart-bar"></i>Gantt chart</a></li>
@@ -63,7 +63,7 @@
         <div class="dashboard-date d-flex flex-wrap align-items-center">
             <h6>Dashboard</h6>
             <div class="date date-form-group">
-                <input type="text" class=" datepicker-here-top-orientation form--control form-control" data-language="en" data-date-format="dd-mm-yyyy" data-position="top left" placeholder="dd-mm-yyyy">
+                <input type="text" class=" datepicker-here-top-orientation form--control form-control" data-language="en" data-date-format="dd-mm-yyyy" data-position="bottom left" placeholder="dd-mm-yyyy">
                 <span class="input-icon"><i class="fas fa-calendar-alt"></i> <span class="arrow-bottom"><i class="las la-angle-down"></i></span></span>
             </div>
         </div>
@@ -125,8 +125,8 @@
                             </select>2 new tasks
                         </div>
                         <ul class="content-right nav">
-                            <li class="nav-item"><a href="#dbl" class="nav-link active" data-bs-toggle="tab"><i class="fas fa-bars"></i></a></li>
-                            <li class="nav-item"><a href="#single" class="nav-link" id="click-to-remove" data-bs-toggle="tab"><i class="fas fa-equals"></i></a></li>
+                            <li class="nav-item remove-class-tab-pane"><a href="#dbl" class="nav-link active" data-bs-toggle="tab"><i class="fas fa-bars"></i></a></li>
+                            <li class="nav-item remove-class-tab-pane"><a href="#single" class="nav-link" id="click-to-remove" data-bs-toggle="tab"><i class="fas fa-equals"></i></a></li>
                         </ul>
                     </div>
                     <div class="date-shape">
