--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -19,8 +19,8 @@
                             </select>2 new tasks
                         </div>
                         <ul class="content-right nav">
-                            <li class="nav-item"><a href="#dbl" class="nav-link active" data-bs-toggle="tab"><i class="fas fa-bars"></i></a></li>
-                            <li class="nav-item"><a href="#single" class="nav-link" id="click-to-remove" data-bs-toggle="tab"><i class="fas fa-equals"></i></a></li>
+                            <li class="nav-item remove-class-tab-pane"><a href="#dbl" class="nav-link active" data-bs-toggle="tab"><i class="fas fa-bars"></i></a></li>
+                            <li class="nav-item remove-class-tab-pane"><a href="#single" class="nav-link" id="click-to-remove" data-bs-toggle="tab"><i class="fas fa-equals"></i></a></li>
                         </ul>
                     </div>
                     <div class="date-shape">
