--- a/src/partial-html/_dash-header.html
+++ b/src/partial-html/_dash-header.html
@@ -4,7 +4,7 @@
         <div class="dashboard-date d-flex flex-wrap align-items-center">
             <h6>Dashboard</h6>
             <div class="date date-form-group">
-                <input type="text" class=" datepicker-here-top-orientation form--control form-control" data-language="en" data-date-format="dd-mm-yyyy" data-position="top left" placeholder="dd-mm-yyyy">
+                <input type="text" class=" datepicker-here-top-orientation form--control form-control" data-language="en" data-date-format="dd-mm-yyyy" data-position="bottom left" placeholder="dd-mm-yyyy">
                 <span class="input-icon"><i class="fas fa-calendar-alt"></i> <span class="arrow-bottom"><i class="las la-angle-down"></i></span></span>
             </div>
         </div>
