--- a/src/test.html
+++ b/src/test.html
@@ -37,7 +37,7 @@
         <p class="mb-0">Strategyzer</p>
     </div>
     <ul class="sidebar-menu">
-        <li><a href="dashboard.html" class="active"><i class="fas fa-qrcode"></i>Dashboard</a></li>
+        <li><a href="dashboard.html"><i class="fas fa-qrcode"></i>Dashboard</a></li>
         <li><a href="test.html"><i class="las la-book-open"></i>Test</a></li>
         <li><a href=""><i class="las la-award"></i>Progress</a></li>
         <li><a href="gantt-chart.html"><i class="las la-chart-bar"></i>Gantt chart</a></li>
@@ -67,7 +67,7 @@
                 </div>
                 <span class="sidebar-toggler d-lg-none"><i class="fas fa-bars"></i></span>
             </div>
-            <div class="bottom-content">
+            <div class="bottom-content text-body-content">
                 <div class="d-flex flex-wrap justify-content-between align-items-center dashborad-content-header mb-3">
                     <div class="left-content">
                         <h5 class="tilte d-inline-block me-2">Lokpal & Lokayuktas</h5>
