--- a/src/html/gantt-chart.html
+++ b/src/html/gantt-chart.html
@@ -1,22 +1,21 @@
 <!-- meta tags and other links -->
 @@include('../partial-html/_template-top.html')
-<link rel="stylesheet" href="https://www.jqueryscript.net/demo/jQuery-Plugin-SVG-Progress-Circle/progresscircle.css">
-<script src="view-source:https://www.jqueryscript.net/demo/jQuery-Plugin-SVG-Progress-Circle/"></script>
+<link rel="stylesheet" href="assets/css/lib/progress.css">
 
 <!-- Dashborad Starts Here  -->
 <div class="dashborad">
     <div class="main-content d-flex flex-wrap">
         @@include('../partial-html/_sidebar.html')
-        <div class="body-content">
+        <div class="body-content min-vh-100">
             <div class="header-top d-flex flex-wrap justify-content-between align-items-center">
-            <div class="header-left">
-                <div class="icon"><i class="las la-arrow-left"></i></div>
-                <div class="dashboard-date d-flex flex-wrap align-items-center">
-                    <h3>Gantt chart</h3>
+                <div class="header-left">
+                    <div class="icon"><i class="las la-arrow-left"></i></div>
+                    <div class="dashboard-date d-flex flex-wrap align-items-center">
+                        <h3>Gantt chart</h3>
+                    </div>
+                    <p class="mb-0">Jan 2022</p>
                 </div>
-                <p class="mb-0">Jan 2022</p>
-            </div>
-            <span class="sidebar-toggler d-lg-none"><i class="fas fa-bars"></i></span>
+                <span class="sidebar-toggler d-lg-none"><i class="fas fa-bars"></i></span>
             </div>
             <div class="bottom-content">
                 <table class="table chart-table">
@@ -33,15 +32,48 @@
                             <td>Economincs</td>
                             <td>9 days</td>
                             <td>45%</td>
+                            <td>
+                                <div class="circlechart" data-percentage="65"></div>
+                            </td>
                         </tr>
                         <tr>
                             <td>Economincs</td>
                             <td>9 days</td>
                             <td>45%</td>
                             <td>
-                                <div id="demo">
-                                    <div class="circlechart" data-percentage="85">.Net</div>
-                                </div>
+                                <div class="circlechart" data-percentage="65"></div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Economincs</td>
+                            <td>9 days</td>
+                            <td>45%</td>
+                            <td>
+                                <div class="circlechart" data-percentage="65"></div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Economincs</td>
+                            <td>9 days</td>
+                            <td>45%</td>
+                            <td>
+                                <div class="circlechart" data-percentage="65"></div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Economincs</td>
+                            <td>9 days</td>
+                            <td>45%</td>
+                            <td>
+                                <div class="circlechart" data-percentage="65"></div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Economincs</td>
+                            <td>9 days</td>
+                            <td>45%</td>
+                            <td>
+                                <div class="circlechart" data-percentage="65"></div>
                             </td>
                         </tr>
                     </tbody>
@@ -54,7 +86,10 @@
 
 
 @@include('../partial-html/_template-bottom.html')
-<script src="jQuery-plugin-progressbar.js"></script>
+<script src="assets/js/lib/progress.js"></script>
+<script>
+    $('.circlechart').circlechart(); // Initialization
+</script>
 </body>
 
 </html>
