--- a/src/html/test.html
+++ b/src/html/test.html
@@ -17,7 +17,7 @@
                 </div>
                 <span class="sidebar-toggler d-lg-none"><i class="fas fa-bars"></i></span>
             </div>
-            <div class="bottom-content">
+            <div class="bottom-content text-body-content">
                 <div class="d-flex flex-wrap justify-content-between align-items-center dashborad-content-header mb-3">
                     <div class="left-content">
                         <h5 class="tilte d-inline-block me-2">Lokpal & Lokayuktas</h5>
