--- a/src/index.html
+++ b/src/index.html
@@ -868,7 +868,7 @@
 <!-- How-Section Ends Here -->
 
 <!-- Footer-Section Starts Here -->
-<footer class="footer-section">
+<footer class="footer-section bg-white">
     <div class="container">
         <div class="footer-top">
             <div class="row justify-content-between gy-5">
