--- a/src/partial-html/_footer.html
+++ b/src/partial-html/_footer.html
@@ -1,5 +1,5 @@
 <!-- Footer-Section Starts Here -->
-<footer class="footer-section">
+<footer class="footer-section bg-white">
     <div class="container">
         <div class="footer-top">
             <div class="row justify-content-between gy-5">
