--- a/src/partial-html/_sidebar.html
+++ b/src/partial-html/_sidebar.html
@@ -4,7 +4,7 @@
         <p class="mb-0">Strategyzer</p>
     </div>
     <ul class="sidebar-menu">
-        <li><a href="dashboard.html" class="active"><i class="fas fa-qrcode"></i>Dashboard</a></li>
+        <li><a href="dashboard.html"><i class="fas fa-qrcode"></i>Dashboard</a></li>
         <li><a href="test.html"><i class="las la-book-open"></i>Test</a></li>
         <li><a href=""><i class="las la-award"></i>Progress</a></li>
         <li><a href="gantt-chart.html"><i class="las la-chart-bar"></i>Gantt chart</a></li>
