manna is adding file

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                         <span class="input-icon"><i class="fas fa-calendar-alt"></i></span>
                     </div>
                 </div>
-                <button type="submit" class="btn btn--base">Next</button>
+                <a href="exam.html" type="submit" class="btn btn--base">Next</a>
             </div>
             <div class="d-lg-none banner-thumb-two">
                 <img src="assets/images/thumb/banner-thumb.png" alt="thumb" class="mw-100">
