--- a/src/sign-in.html
+++ b/src/sign-in.html
@@ -48,16 +48,18 @@
                             <div class="form-group">
                                 <input type="text" class="form-control form--control" placeholder="example@gmail.com">
                                 <label for="" class="form-label">E-mail</label>
+                                <span class="icon"><i class="fas fa-at"></i></span>
                             </div>
                         </div>
                         <div class="col-sm-12">
                             <div class="form-group">
                                 <input type="text" class="form-control form--control" placeholder="6+ Strong character">
                                 <label for="" class="form-label">Password</label>
+                                <span class="icon"><i class="fas fa-lock"></i></span>
                             </div>
                         </div>
-                        <div class="col-xl-6">
-                            <button type="submit" class="btn btn--base w-100">Login</button>
+                        <div class="">
+                            <button type="submit" class="btn btn--base w-100 d-block">Login</button>
                         </div>
                     </div>
                 </form>
