--- a/src/overview.html
+++ b/src/overview.html
@@ -53,7 +53,7 @@
                     <div class="notification">
                         <i class="fas fa-bell"></i>
                     </div>
-                    <div class="d-flex flex-wrap">
+                    <a href="dashboard.html" class="d-flex flex-wrap">
                         <div class="user-content">
                             <p class="name mb-0">Ravi Kapoor</p>
                             <p class="pb-0 mb-0 active">Online</p>
@@ -61,7 +61,7 @@
                         <div class="user-thumb">
                             <img src="assets/images/thumb/user.png" alt="thumb">
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="header-trigger-wrapper">
                     <div class="header-trigger"><span></span></div>
@@ -81,9 +81,9 @@
                     <div class="section-header text-center text-sm-start">
                         <h2 class="section-header__subtitle">Here is your</h2>
                         <h2 class="section-header__title">Infographic Roadmap
-                        <div class="shape">
-                            <img src="assets/images/shape/title-shape.png" alt="shape">
-                        </div>
+                            <div class="shape">
+                                <img src="assets/images/shape/title-shape.png" alt="shape">
+                            </div>
                         </h2>
                     </div>
                     <a href="#0" class="btn btn--outline-base px-4 py-3">Get Gantt Chart <i class="fas fa-chevron-circle-right ms-2"></i></a>
