hand over to manna to solve the revision

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,7 +16,7 @@
                 </h1>
                 <div class="border-content position-relative">
                     <p>Question: 1</p>
-                    <h4>What is the tentative date of your upcoming UPSC Prelims attempt?</h4>
+                    <h4 class="title">What is the tentative date of your upcoming UPSC Prelims attempt?</h4>
                     <div class="date-form-group">
                         <input type="text" class="datepicker-here form--control form-control" data-language='en' data-date-format="dd-mm-yyyy"
                             data-position='top left' placeholder="Date">
