--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Site Titlte Here</title>
+    <title>Exams Strategyzer</title>
     <link rel="icon" type="image/png" href="assets/images/favicon.png" sizes="16x16">
     <!-- bootstrap 5  -->
     <link rel="stylesheet" href="assets/css/lib/bootstrap.min.css">
@@ -76,7 +76,7 @@
                 </h1>
                 <div class="border-content position-relative">
                     <p>Question: 1</p>
-                    <h4>What is the tentative date of your upcoming UPSC Prelims attempt?</h4>
+                    <h4 class="title">What is the tentative date of your upcoming UPSC Prelims attempt?</h4>
                     <div class="date-form-group">
                         <input type="text" class="datepicker-here form--control form-control" data-language='en' data-date-format="dd-mm-yyyy"
                             data-position='top left' placeholder="Date">
