--- a/src/overview.html
+++ b/src/overview.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Site Titlte Here</title>
+    <title>Exams Strategyzer</title>
     <link rel="icon" type="image/png" href="assets/images/favicon.png" sizes="16x16">
     <!-- bootstrap 5  -->
     <link rel="stylesheet" href="assets/css/lib/bootstrap.min.css">
@@ -75,10 +75,10 @@
 <!-- Learning-Section Starts Here -->
 <section class="learning-section pt-100">
     <div class="container">
-        <div class="row">
+        <div class="row gy-4">
             <div class="col-lg-7">
                 <div class="learning-left text-center text-sm-start mt-0">
-                    <div class="section-header text-center text-sm-start">
+                    <div class="section-header text-center text-sm-start mb-0">
                         <h2 class="section-header__subtitle">Here is your</h2>
                         <h2 class="section-header__title">Infographic Roadmap
                             <div class="shape">
@@ -87,6 +87,11 @@
                         </h2>
                     </div>
                     <a href="#0" class="btn btn--outline-base px-4 py-3">Get Gantt Chart <i class="fas fa-chevron-circle-right ms-2"></i></a>
+                </div>
+            </div>
+            <div class="col-lg-5 align-self-end">
+                <div class="text-end pb-3">
+                    <a href="" class="btn btn--base btn--md"><i class="fas fa-file-download fs--15px"></i> Download Roadmap</a>
                 </div>
             </div>
         </div>
@@ -101,7 +106,7 @@
         <img src="assets/images/thumb/footer-bg.png" alt="thumb">
     </div>
     <div class="row flex-wrap-reverse">
-        <div class="col-lg-3">
+        <div class="col-lg-3 pe-xl-5">
             <div class="roadmap-thumb">
                 <img src="assets/images/thumb/roadmap.png" alt="thumb" class="mw-100">
             </div>
