--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Site Titlte Here</title>
+    <title>Exams Strategyzer</title>
     <link rel="icon" type="image/png" href="assets/images/favicon.png" sizes="16x16">
     <!-- bootstrap 5  -->
     <link rel="stylesheet" href="assets/css/lib/bootstrap.min.css">
@@ -26,7 +26,6 @@
 <body>
     <!-- Overlay -->
     <div class="overlay"></div>
-
 
 <!-- Dashborad Starts Here  -->
 <div class="dashborad">
@@ -1095,6 +1094,7 @@
     </div>
 </div>
 <!-- Dashborad Ends Here  -->
+
 
 <!-- Test-Modal Starts Here -->
 <div class="modal" id="confirmModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-modal="true" role="dialog">
