modal, roadmap button add -manna

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -42,6 +42,7 @@
         <li><a href="gantt-chart.html"><i class="las la-chart-bar"></i>Gantt chart</a></li>
         <li><a href="roadmap.html"><i class="las la-map"></i>Roadmap</a></li>
         <li><a href=""><i class="las la-cog"></i>Setting</a></li>
+        <li><a href="javascript:void(0)"  data-bs-target="#confirmModal" data-bs-toggle="modal"><i class="las la-cog"></i>Modal</a></li>
     </ul>
     <div class="user-wrapper">
         <div class="user-thumb mb-3">
@@ -134,13 +135,13 @@
                     <div class="tab-content">
                         <div class="tab-pane fade" id="single">
                             <div class="faq-wrapper w-100 mx-0 px-0">
-                                <div class="faq-item">
+                                <div class="faq-item o-h-500 custom-scrollbar">
                                     <div class="faq-item__header d-flex flex-wrap justify-content-between align-items-center">
                                         <div class="title">
                                             <span>Polity</span> (Rights to equality (Article 14-18)
                                         </div>
-                                        <div class="progress progress-custom">
-                                            <div class="progress-bar" style="background-color: transparent;"></div>
+                                        <div class="progress progress-custom progress-bg">
+                                            <div class="progress-bar"></div>
                                             <span class="percentage">0%</span>
                                         </div>
                                     </div>
@@ -237,13 +238,13 @@
                     <div class="tab-pane fade show active" id="task">
                         <div class="faq-main-wrapper d-flex flex-wrap justify-content-between">
                             <div class="faq-wrapper">
-                                <div class="faq-item">
+                                <div class="faq-item o-h-500 custom-scrollbar">
                                     <div class="faq-item__header d-flex flex-wrap justify-content-between align-items-center">
                                         <div class="title">
                                             <span>Polity</span> (Rights to equality (Article 14-18)
                                         </div>
-                                        <div class="progress progress-custom">
-                                            <div class="progress-bar" style="background-color: transparent;"></div>
+                                        <div class="progress progress-custom progress-bg">
+                                            <div class="progress-bar"></div>
                                             <span class="percentage">0%</span>
                                         </div>
                                     </div>
@@ -320,12 +321,12 @@
                                 </div>
                             </div>
                             <div class="faq-wrapper">
-                                <div class="faq-item">
+                                <div class="faq-item o-h-500 custom-scrollbar">
                                     <div class="faq-item__header d-flex flex-wrap justify-content-between align-items-center">
                                         <div class="title">
                                             <span>Polity</span> (Rights to equality (Article 14-18)
                                         </div>
-                                        <div class="progress progress-custom">
+                                        <div class="progress progress-custom progress-bg">
                                             <div class="progress-bar" style="background-color: transparent;"></div>
                                             <span class="percentage">0%</span>
                                         </div>
