--- a/src/html/dashboard.html
+++ b/src/html/dashboard.html
@@ -28,13 +28,13 @@
                     <div class="tab-content">
                         <div class="tab-pane fade" id="single">
                             <div class="faq-wrapper w-100 mx-0 px-0">
-                                <div class="faq-item">
+                                <div class="faq-item o-h-500 custom-scrollbar">
                                     <div class="faq-item__header d-flex flex-wrap justify-content-between align-items-center">
                                         <div class="title">
                                             <span>Polity</span> (Rights to equality (Article 14-18)
                                         </div>
-                                        <div class="progress progress-custom">
-                                            <div class="progress-bar" style="background-color: transparent;"></div>
+                                        <div class="progress progress-custom progress-bg">
+                                            <div class="progress-bar"></div>
                                             <span class="percentage">0%</span>
                                         </div>
                                     </div>
@@ -131,13 +131,13 @@
                     <div class="tab-pane fade show active" id="task">
                         <div class="faq-main-wrapper d-flex flex-wrap justify-content-between">
                             <div class="faq-wrapper">
-                                <div class="faq-item">
+                                <div class="faq-item o-h-500 custom-scrollbar">
                                     <div class="faq-item__header d-flex flex-wrap justify-content-between align-items-center">
                                         <div class="title">
                                             <span>Polity</span> (Rights to equality (Article 14-18)
                                         </div>
-                                        <div class="progress progress-custom">
-                                            <div class="progress-bar" style="background-color: transparent;"></div>
+                                        <div class="progress progress-custom progress-bg">
+                                            <div class="progress-bar"></div>
                                             <span class="percentage">0%</span>
                                         </div>
                                     </div>
@@ -214,12 +214,12 @@
                                 </div>
                             </div>
                             <div class="faq-wrapper">
-                                <div class="faq-item">
+                                <div class="faq-item o-h-500 custom-scrollbar">
                                     <div class="faq-item__header d-flex flex-wrap justify-content-between align-items-center">
                                         <div class="title">
                                             <span>Polity</span> (Rights to equality (Article 14-18)
                                         </div>
-                                        <div class="progress progress-custom">
+                                        <div class="progress progress-custom progress-bg">
                                             <div class="progress-bar" style="background-color: transparent;"></div>
                                             <span class="percentage">0%</span>
                                         </div>
