--- a/src/html/roadmap.html
+++ b/src/html/roadmap.html
@@ -18,9 +18,12 @@
                 </div>
                 <span class="sidebar-toggler d-lg-none"><i class="fas fa-bars"></i></span>
             </div>
-            <div class="bottom-content m-auto vh-100 d-flex flex-column justify-content-center">
+            <div class="bottom-content">
+                <div class="d-right-btn">
+                    <a href="" class="btn btn--base btn--md position-relative"><i class="fas fa-file-download fs--15px"></i> Download Roadmap</a>
+                </div>
                 <div class="dashborad-roadmap position-relative">
-                    <div class="roadmap-slider ">
+                    <div class="roadmap-slider">
                         <div class="single-slide">
                             <div class="roadmap-item">
                                 <div class="bg-white rounded-4 p-3">
@@ -70,7 +73,7 @@
                         <img src="assets/images/thumb/footer-bg.png" alt="thumb">
                     </div>
                 </div>
-                <p class="text-end mt-5 me-4">Scroll Right to know more <i class="las la-long-arrow-alt-right"></i></p>
+                <p class="text-end pt-50 me-4">Scroll Right to know more <i class="las la-long-arrow-alt-right"></i></p>
             </div>
         </div>
     </div>
