--- a/src/test.html
+++ b/src/test.html
@@ -43,6 +43,7 @@
         <li><a href="gantt-chart.html"><i class="las la-chart-bar"></i>Gantt chart</a></li>
         <li><a href="roadmap.html"><i class="las la-map"></i>Roadmap</a></li>
         <li><a href=""><i class="las la-cog"></i>Setting</a></li>
+        <li><a href="javascript:void(0)"  data-bs-target="#confirmModal" data-bs-toggle="modal"><i class="las la-cog"></i>Modal</a></li>
     </ul>
     <div class="user-wrapper">
         <div class="user-thumb mb-3">
