1st revision done & sent to ravi

--- a/src/sign-in.html
+++ b/src/sign-in.html
@@ -58,7 +58,7 @@
                                 <span class="icon"><i class="fas fa-lock"></i></span>
                             </div>
                         </div>
-                        <div class="">
+                        <div class="col-12">
                             <button type="submit" class="btn btn--base w-100 d-block">Login</button>
                         </div>
                     </div>
