--- a/src/gantt-chart.html
+++ b/src/gantt-chart.html
@@ -59,7 +59,7 @@
 </div>
         <div class="body-content min-vh-100">
             <div class="header-top d-flex flex-wrap justify-content-between align-items-center">
-                <div class="header-left">
+                <div class="header-left mb-0">
                     <div class="icon"><i class="las la-arrow-left"></i></div>
                     <div class="dashboard-date d-flex flex-wrap align-items-center">
                         <h3>Gantt chart</h3>
